--- a/style.css
+++ b/style.css
@@ -77,6 +77,19 @@ main{
     font-size: var(--size-title);
 }
 
+.read-more-text{
+    font-size: 18px;
+    color: var(--text-color);
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    display: flex;
+}
+
+.read-more-text svg{
+    margin-left: 10px;
+}
+
 .description-text{
     
     
@@ -99,30 +112,48 @@ main{
 }
 
 .container-designer{
-    width: 400px;
+    width: 380px;
     background-color: var(--background);
     box-shadow: 0px 2px 2px 2px #0000003e;
-    bottom: -50px;
-    right: 160px;
+    bottom: -80px;
+    right: 80px;
     position: absolute;
     
-    padding: 25px 30px;
+    padding: 20px 30px;
     height: 150px;
 }
 .container-infoDesigner{
-    height: 100px;
-    width: 400px;
+    height: auto;
+    width: 100%;
     display: flex;
+    align-items: center;
+    
 }
 
 .image-designer{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
+    margin-right: 15px;
 }
 
 .name-designer, .specialization-designer{
     color: var(--text-color);
 }
+.name-designer{
+    font-size: 14px;
+}
 
+.specialization-designer{
+    font-size: 12px;
+}
 
+.designed-in{
+    font-size: 24px;
+    color: var(--text-color);
+    font-weight: 500;
+    font-family: 'Lora', serif;
+    max-width: 250px;
+    margin: 10px 0px;
+    
+}
